assign1/tests/type-checking/bad/func-too-few-args.c
#include "FenneC.h"

void foo(unsigned a, unsigned b) {
}
int main() {
    foo(1U);
    return 0;
}